--- a/content/step/_index.html
+++ b/content/step/_index.html
@@ -14,6 +14,7 @@ weight: 300
 </tr></thead>
 <tbody>
   <tr><td><a href="generator">generator</a></td><td>Use a jsonlines file or URL as a source</td></tr>
+  <tr><td><a href="label-web">label-web</a></td><td>Assign answers in a web interface</td></tr>
   <tr><td><a href="pubmed-search">pubmed-search</a></td><td>Import documents from a PubMed search</td></tr>
   <tr><td><a href="recogito">recogito</a></td><td>text named entity annotation</td></tr>
   <tr><td><a href="spacy">spacy</a></td><td>Spacy.io language model integration</td></tr>
